<resources>
    <string name="app_name">Library</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_library">Library</string>
    <string name="lbl_download">Download</string>
    <string name="lbl_delete_from_your_library">Delete from your library</string>
    <string name="lbl_add_to_shelves">Add to shelves</string>
    <string name="lbl_mark_as_read">Mark as read</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_remove_download">Remove download</string>
    <string name="lbl_add_to_wishlist">Add to wishlist</string>
    <string name="lbl_no_shelves">No shelves</string>
    <string name="lbl_shelf_name">Shelf name</string>
    <string name="lbl_confirm">Confirm</string>
    <string name="title_activity_shelf_detail">ShelfDetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="lbl_delete_shelf">Delete shelf</string>
    <string name="lbl_rename_shelf">Rename shelf</string>
    <string name="lbl_free_sample">Free Sample</string>
</resources>