<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="?attr/bottomSheetStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    app:behavior_hideable="false"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <com.padcmyanmar.smtz.library.views.components.RoundedCornerImageView
        android:id="@+id/ivBookBottomSheetLibrary"
        android:layout_width="100dp"
        android:layout_height="160dp"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:layout_marginBottom="@dimen/margin_medium_2"
        android:scaleType="fitXY"
        android:src="@mipmap/book"
        app:cornerRadius="@dimen/margin_medium" />

    <TextView
        android:id="@+id/tvBookNameBottomSheetLibrary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium_3"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_toEndOf="@id/ivBookBottomSheetLibrary"
        android:text="Lean UX: Designing Great Products with Agile Teams"
        android:textColor="@color/black"
        android:textSize="@dimen/text_regular_2x" />

    <TextView
        android:id="@+id/tvBookAuthorNameBottomSheetLibrary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvBookNameBottomSheetLibrary"
        android:layout_toEndOf="@id/ivBookBottomSheetLibrary"
        android:paddingStart="@dimen/margin_medium"
        android:text="Josh Waitzkin ~ Ebook"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/text_regular_2x" />

    <ImageView
        android:id="@+id/ivSeparateLine"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_medium_2"
        android:layout_below="@id/ivBookBottomSheetLibrary"
        android:src="@drawable/background_line" />

    <LinearLayout
        android:id="@+id/llRemoveDownload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivSeparateLine"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:weightSum="10">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/icon_height"
            android:layout_weight="2"
            android:src="@drawable/ic_baseline_remove_circle_outline_26dp_secondary" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:text="@string/lbl_remove_download"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/text_regular_2x"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDeleteFromLibrary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llRemoveDownload"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:weightSum="10">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/margin_medium_3"
            android:layout_weight="2"
            android:src="@drawable/ic_trash" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:paddingTop="@dimen/margin_small"
            android:text="@string/lbl_delete_from_your_library"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/text_regular_2x"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAddtoWishlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:weightSum="10"
        android:layout_below="@id/llDeleteFromLibrary">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/margin_xlarge"
            android:src="@drawable/ic_add_to_wishlist"
            android:layout_weight="2"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/margin_small"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/text_regular_2x"
            android:textStyle="bold"
            android:layout_weight="8"
            android:text="@string/lbl_add_to_wishlist"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAddtoShelvesListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:weightSum="10"
        android:layout_below="@id/llAddtoWishlist">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/margin_xlarge"
            android:src="@drawable/ic_baseline_add_50dp_secondary"
            android:layout_weight="2"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/margin_small"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/text_regular_2x"
            android:textStyle="bold"
            android:layout_weight="8"
            android:text="@string/lbl_add_to_shelves"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_marginBottom="@dimen/margin_large"
        android:weightSum="10"
        android:layout_below="@id/llAddtoShelvesListView">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/icon_height"
            android:layout_marginTop="@dimen/margin_small"
            android:src="@drawable/ic_bookmark"
            android:layout_weight="2"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/margin_small"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/text_regular_2x"
            android:textStyle="bold"
            android:layout_weight="8"
            android:text="@string/lbl_mark_as_read"/>

    </LinearLayout>

</RelativeLayout>